# backend/src/firmware/dto/default-config.dto.ts
@@ -1,17 +1,39 @@
 import { CreateBoardConfigDTO } from './board-config.dto';
-import { IMUDefaultPinsDTO } from './imu-config.dto';
+import { IMUDefaultDTO } from './imu-config.dto';
 
-export class DefaultBuildConfigDTO {
+export interface DefaultBuildConfigDTO {
   /**
    * Default config of the selected board
    * contains all the default pins information about the selected board
    */
-  public boardConfig: CreateBoardConfigDTO;
+  boardConfig: CreateBoardConfigDTO;
+
+  /**
+   * Inform the flashing utility that the user need to press the boot (or Flash) button
+   * on the tracker
+   */
+  needBootPress?: boolean;
+
+  /**
+   * Inform the flashing utility that the board will need a reboot after
+   * being flashed
+   */
+  needManualReboot?: boolean;
+
+  /**
+   * Will use the default values and skip the customisation options
+   */
+  shouldOnlyUseDefaults?: boolean;
 
   /**
    * List of the possible imus pins, usually only two items will be sent
    *
    * @minItems 1
    */
-  public imuPins: IMUDefaultPinsDTO[];
+  imuDefaults: IMUDefaultDTO[];
+
+  /**
+   * Gives the offset of the firmare file in the eeprom. Used for flashing
+   */
+  application_offset: number;
 }
